--- a/manifests/ops-files/routed_backend_servers.yml
+++ b/manifests/ops-files/routed_backend_servers.yml
@@ -9,8 +9,6 @@
       - 192.168.0.24
       balance: roundrobin
       backend_port: 31719
-      ssl: true
-      backend_ssl: noverify
+#      ssl: true
+#      backend_ssl: noverify
 
-- type: replace
-  /instance_groups/0/jobs/name=haproxy/properties/ha_proxy/disable
